Optimize health checks and startup performance across all services
This commit implements comprehensive health check optimizations and startup
performance improvements across the entire Divemap infrastructure stack.

Health Check Optimizations:
- Backend: Reduce grace period from 20s to 4s, interval from 30s to 4s
- Database: Reduce grace period from 60s to 3s, interval from 15s to 3s
- Nginx: Reduce grace period from 10s to 4s, interval from 30s to 5s
- All services: Reduce timeouts for faster failure detection

Nginx Production Improvements:
- Fix Docker health check to use correct port (8000) and endpoint (/nginx-health)
- Add comprehensive logging to stdout/stderr for better debugging
- Implement startup verification with health check endpoint testing
- Add worker process ID tracking in response headers
- Create dedicated /nginx-status endpoint for debugging

Database Performance:
- Increase migration retry attempts from 25 to 50 for better reliability
- Optimize MySQL startup with aggressive health check settings

Build Process:
- Add cleanup of previous builds in build-with-static-assets.sh
- Prevent accumulation of stale static assets

Expected Impact:
- Database health check: 9s → 6s (3s faster)
- Backend startup: Significantly faster due to earlier database availability
- Nginx startup: More reliable with proper health check verification
- Overall system startup: 3-5 seconds faster end-to-end

All changes maintain backward compatibility while significantly improving
cold start performance and system reliability.

--- a/nginx/fly.toml
+++ b/nginx/fly.toml
@@ -35,10 +35,11 @@ primary_region = 'fra'
     soft_limit = 20
 
   [[http_service.checks]]
-    grace_period = "10s"
-    interval = "30s"
+    grace_period = "4s"
+    interval = "5s"
     method = "GET"
-    timeout = "10s"
+    timeout = "3s"
+    protocol = "http"
     path = "/nginx-health"
 
 # VM configuration
