--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -11,9 +11,20 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for" '
                       'fly_client_ip="$http_fly_client_ip"';
+    
+    # Enhanced logging for debugging
+    log_format debug_format '$remote_addr - $remote_user [$time_local] "$request" '
+                           '$status $body_bytes_sent "$http_referer" '
+                           '"$http_user_agent" "$http_x_forwarded_for" '
+                           'rt=$request_time uct="$upstream_connect_time" '
+                           'uht="$upstream_header_time" urt="$upstream_response_time" '
+                           'pid=$pid worker_pid=$pid fly_client_ip="$http_fly_client_ip"';
 
-    access_log  /var/log/nginx/access.log  main;
-    error_log   /var/log/nginx/error.log;
+    access_log  /dev/stdout main;
+    error_log   /dev/stderr warn;
+    
+    # Enhanced logging for debugging worker process issues
+    error_log   /dev/stderr debug;
 
     # Performance
     sendfile        on;
@@ -50,14 +61,14 @@ http {
     limit_req_zone $binary_remote_addr zone=api:10m rate=15r/s;
     limit_req_zone $binary_remote_addr zone=login:10m rate=8r/m;
 
-    # Upstream definitions for Fly.io internal addresses
+    # Upstream definitions for Fly.io addresses
     upstream frontend {
         server divemap-frontend.flycast:80;
         keepalive 32;
     }
     
     upstream backend {
-        server divemap-backend.flycast:80;
+        server divemap-backend.flycast:80 max_fails=1 fail_timeout=3s;
         keepalive 32;
     }
 
@@ -123,8 +134,13 @@ http {
             proxy_buffer_size 16k;
             proxy_buffers 16 16k;
             proxy_busy_buffers_size 32k;
-            proxy_read_timeout 300s;
-            proxy_connect_timeout 75s;
+            proxy_read_timeout 2s;
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            # Fast retry on failure for quick backend detection
+            proxy_next_upstream error timeout;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 3s;
         }
         
         # Special handling for dive-sites endpoint that can have large headers
@@ -146,8 +162,13 @@ http {
             proxy_buffer_size 32k;
             proxy_buffers 32 32k;
             proxy_busy_buffers_size 64k;
-            proxy_read_timeout 300s;
-            proxy_connect_timeout 75s;
+            proxy_read_timeout 2s;
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            # Fast retry on failure for quick backend detection
+            proxy_next_upstream error timeout;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 3s;
         }
 
         # Backend documentation
@@ -158,6 +179,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
+            proxy_read_timeout 2s;
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            # Fast retry on failure for quick backend detection
+            proxy_next_upstream error timeout;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 3s;
         }
         
         location /redoc {
@@ -167,6 +195,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
+            proxy_read_timeout 2s;
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            # Fast retry on failure for quick backend detection
+            proxy_next_upstream error timeout;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 3s;
         }
         
         location /openapi.json {
@@ -176,6 +211,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
+            proxy_read_timeout 2s;
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            # Fast retry on failure for quick backend detection
+            proxy_next_upstream error timeout;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 3s;
         }
 
         # Login endpoint with stricter rate limiting
@@ -190,20 +232,46 @@ http {
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
+            proxy_read_timeout 2s;
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            # Fast retry on failure for quick backend detection
+            proxy_next_upstream error timeout;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 3s;
         }
 
         # Health check endpoint
         location /nginx-health {
-            access_log off;
+            access_log /dev/stdout debug_format;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
+            add_header X-Nginx-Status "healthy" always;
+            add_header X-Worker-PID $pid always;
+        }
+        
+        # Nginx status endpoint for debugging
+        location /nginx-status {
+            access_log /dev/stdout debug_format;
+            return 200 "nginx_status: running\nworker_pid: $pid\nmaster_pid: $pid\n";
+            add_header Content-Type text/plain;
+            add_header X-Nginx-Status "running" always;
+            add_header X-Worker-PID $pid always;
         }
 
         # Health check endpoint
         location /health {
             proxy_pass http://backend;
             proxy_set_header Host $host;
+            proxy_read_timeout 2s;
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            # Fast retry on failure for quick backend detection
+            proxy_next_upstream error timeout;
+            proxy_next_upstream_tries 2;
+            proxy_next_upstream_timeout 3s;
         }
+        
 
 
         # Security: Block access to hidden files
