--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -11,12 +11,8 @@ RUN rm /etc/nginx/conf.d/default.conf
 # Copy our custom configuration
 COPY dev.conf /etc/nginx/nginx.conf
 
-# Copy startup script
-COPY startup.sh /usr/local/bin/startup.sh
-RUN chmod +x /usr/local/bin/startup.sh
-
 # Expose port 80
 EXPOSE 80
 
-# Start nginx with pre-warming
-CMD ["/usr/local/bin/startup.sh"]
+# Start nginx directly (no pre-warming needed in dev)
+CMD ["nginx", "-g", "daemon off;"]
