--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.539.0",
     "playwright": "^1.54.2",
