--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -17,4 +17,5 @@ markers =
     users: User management tests
     dive_sites: Dive sites tests
     diving_centers: Diving centers tests
-    integration: Integration tests 
+    integration: Integration tests
+    spatial: Tests that require MySQL with PostGIS spatial support (skip on SQLite) 
