--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -115,6 +115,30 @@ http {
             add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://www.gstatic.com https://static.cloudflareinsights.com https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline' https://accounts.google.com; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'self' https://accounts.google.com https://challenges.cloudflare.com; object-src 'none';" always;
         }
 
+        # Newsletter parsing endpoint with longer timeout for OpenAI API calls
+        location /api/v1/newsletters/parse-text {
+            # Rate limiting for API endpoints
+            limit_req zone=api burst=20 nodelay;
+            
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Fly-Client-IP $http_fly_client_ip;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            
+            # Extended timeout for OpenAI API calls (can take 15-30+ seconds)
+            proxy_buffering on;
+            proxy_buffer_size 16k;
+            proxy_buffers 16 16k;
+            proxy_busy_buffers_size 32k;
+            proxy_read_timeout 120s;
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 120s;
+        }
+
         # Backend API routes with rate limiting
         location /api/ {
             # Rate limiting for API endpoints
