--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -115,8 +115,11 @@ http {
             add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://www.gstatic.com https://static.cloudflareinsights.com https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline' https://accounts.google.com; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'self' https://accounts.google.com https://challenges.cloudflare.com; object-src 'none';" always;
         }
 
-        # Newsletter parsing endpoint with longer timeout for OpenAI API calls
-        location /api/v1/newsletters/parse-text {
+        # Endpoints requiring extended timeout for long-running operations
+        # - Newsletter parsing: OpenAI API calls (15-30+ seconds)
+        # - Dive import: XML processing with dive site matching (30-60+ seconds)
+        # - Dive import confirm: Creating multiple dives with database operations (30-60+ seconds)
+        location ~ ^/api/v1/(newsletters/parse-text|dives/import/) {
             # Rate limiting for API endpoints
             limit_req zone=api burst=20 nodelay;
             
@@ -129,11 +132,11 @@ http {
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
             
-            # Extended timeout for OpenAI API calls (can take 15-30+ seconds)
+            # Extended timeout for long-running operations
             proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 16 16k;
-            proxy_busy_buffers_size 32k;
+            proxy_buffer_size 32k;
+            proxy_buffers 32 32k;
+            proxy_busy_buffers_size 64k;
             proxy_read_timeout 120s;
             proxy_connect_timeout 10s;
             proxy_send_timeout 120s;
