--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.2
 pytest-cov==4.1.0
+freezegun==1.5.5
 email-validator==2.1.0
 pydantic[email]==2.9.2
 # Security additions
