--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
+    "react-slider": "^2.0.6",
     "recharts": "^3.2.1",
     "tailwindcss": "^3.4.17"
   },
