--- a/env.example
+++ b/env.example
@@ -52,6 +52,22 @@ TURNSTILE_VERIFY_URL=https://challenges.cloudflare.com/turnstile/v0/siteverify
 #R2_SECRET_ACCESS_KEY=your_r2_secret_access_key_here
 #R2_BUCKET_NAME=your_r2_bucket_name_here
 
+# AWS Configuration for Email Notifications (Optional)
+# If not configured, email notifications will not be sent
+# Get these from AWS Console: https://console.aws.amazon.com/
+#AWS_ACCESS_KEY_ID=your_aws_access_key_id
+#AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+#AWS_REGION=eu-central-1
+#AWS_SQS_QUEUE_URL=https://sqs.REGION.amazonaws.com/ACCOUNT_ID/divemap-email-queue
+#AWS_SES_FROM_EMAIL=noreply@divemap.com
+#AWS_SES_FROM_NAME=Divemap
+#FRONTEND_URL=https://divemap.com
+
+# Lambda API Key (for internal service authentication)
+# Generate with: openssl rand -hex 32
+# Must match the lambda_api_key in terraform.tfvars
+#LAMBDA_API_KEY=your-secure-random-api-key-here
+
 # Production Environment
 #ENVIRONMENT=production
 #CORS_ORIGINS=https://divemap.gr,https://divemap.fly.dev
