Add AWS email notifications via SQS/Lambda/SES
Implement complete Terraform-based AWS infrastructure for
asynchronous email notifications using SQS, Lambda, and SES.
Includes enhanced Lambda error handling with automatic retries,
Cloudflare integration support, and comprehensive documentation.

Infrastructure (Terraform):
- SQS queue with dead-letter queue and encryption
- Lambda function for email processing with SQS trigger
- SES email configuration and verification
- EventBridge rules for scheduled digest notifications
- IAM roles and dedicated application user with minimal
  permissions
- CloudWatch log groups with retention policies
- KMS key for SQS encryption
- Comprehensive outputs for integration

Lambda enhancements:
- Proper exception propagation for SQS retry mechanism
- Enhanced logging with URL, status codes, and error bodies
- Cloudflare API token support for bypassing challenges
- Custom User-Agent header for firewall rule matching
- Increased timeout to 30 seconds for backend API calls
- Retryable error detection (5xx) vs non-retryable (4xx)
- Top-level exception handler that re-raises retryable
  errors to trigger SQS redelivery

Backend changes:
- Modified test_email_config to use environment variables
  instead of database EmailConfig (for SES compatibility)
- Added test-email-queue endpoint for testing full
  SQS/Lambda/SES pipeline
- Added test email templates (HTML and text)

Documentation:
- DEPLOY.md: Complete deployment and configuration guide
- SETUP.md: AWS credentials and IAM setup instructions
- TESTING.md: Step-by-step testing procedures
- TROUBLESHOOTING.md: Common issues and solutions
- README.md: High-level overview and architecture

Configuration:
- Terraform variables for all configurable parameters
- Example terraform.tfvars with documentation
- .gitignore updates for Terraform state files

This infrastructure enables reliable, scalable email delivery
with automatic retries, dead-letter queue handling, and
scheduled digest notifi

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,7 @@ database_backups/
 wg-*.conf
 .playwright-mcp/
 nginx/frontend-build/
+.terraform*
+terraform.tfstate*
+terraform.tfvars
+terraform/lambda_email_processor.zip
