Fix HTTPS redirects and improve notification performance
This commit addresses production HTTPS redirect issues and
optimizes notification system performance.

Backend Changes:
- Add middleware to fix request URL scheme based on
  X-Forwarded-Proto header, ensuring FastAPI generates
  correct HTTPS URLs for redirects in production
- Convert dive site notification sending to background
  tasks, improving API response time by sending
  notifications asynchronously
- Add duplicate route handler for notifications endpoint
  to handle both empty path and "/" path

Nginx Configuration:
- Update X-Forwarded-Proto header handling to use
  Cloudflare's header if present, otherwise default to
  https for all proxy locations
- Disable access logging for health check endpoint to
  reduce log noise

Frontend Changes:
- Add comprehensive changelog entry for December 19, 2025
  release documenting all major features, improvements,
  bug fixes, and database changes since November 3rd
- Update changelog formatting for better readability

These changes ensure proper HTTPS handling in production
environments behind Cloudflare and improve user experience
by reducing API response times for dive site creation.

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -127,7 +127,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            # Use X-Forwarded-Proto from Cloudflare if present, otherwise default to https
+            set $forwarded_proto $http_x_forwarded_proto;
+            if ($forwarded_proto = '') {
+                set $forwarded_proto 'https';
+            }
+            proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
@@ -151,7 +156,9 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            # Cloudflare always uses HTTPS, so set X-Forwarded-Proto to https
+            # This ensures FastAPI generates correct HTTPS URLs for redirects
+            proxy_set_header X-Forwarded-Proto https;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
@@ -179,7 +186,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            # Use X-Forwarded-Proto from Cloudflare if present, otherwise default to https
+            set $forwarded_proto $http_x_forwarded_proto;
+            if ($forwarded_proto = '') {
+                set $forwarded_proto 'https';
+            }
+            proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
@@ -204,7 +216,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            # Use X-Forwarded-Proto from Cloudflare if present, otherwise default to https
+            set $forwarded_proto $http_x_forwarded_proto;
+            if ($forwarded_proto = '') {
+                set $forwarded_proto 'https';
+            }
+            proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_read_timeout 2s;
             proxy_connect_timeout 2s;
@@ -220,7 +237,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            # Use X-Forwarded-Proto from Cloudflare if present, otherwise default to https
+            set $forwarded_proto $http_x_forwarded_proto;
+            if ($forwarded_proto = '') {
+                set $forwarded_proto 'https';
+            }
+            proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_read_timeout 2s;
             proxy_connect_timeout 2s;
@@ -236,7 +258,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            # Use X-Forwarded-Proto from Cloudflare if present, otherwise default to https
+            set $forwarded_proto $http_x_forwarded_proto;
+            if ($forwarded_proto = '') {
+                set $forwarded_proto 'https';
+            }
+            proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_read_timeout 2s;
             proxy_connect_timeout 2s;
@@ -255,7 +282,12 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            # Use X-Forwarded-Proto from Cloudflare if present, otherwise default to https
+            set $forwarded_proto $http_x_forwarded_proto;
+            if ($forwarded_proto = '') {
+                set $forwarded_proto 'https';
+            }
+            proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
@@ -270,7 +302,8 @@ http {
 
         # Health check endpoint
         location /nginx-health {
-            access_log /dev/stdout debug_format;
+            access_log off;
+            #access_log /dev/stdout debug_format;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
             add_header X-Nginx-Status "healthy" always;
