--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "fuse.js": "^7.1.0",
