--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
@@ -19,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-geolocated": "^4.3.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
@@ -26,7 +28,8 @@
     "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
     "recharts": "^3.2.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
