Fix ownership revocation and update form migration docs
- Backend: Update `revoke_diving_center_ownership` to handle string/object inputs robustly and fix 422 errors
- Backend: Allow revoking 'claimed' status by resetting to 'unclaimed'
- Backend: Add `DivingCenterOwnershipRevocation` schema
- Frontend: Update admin ownership revocation to send structured JSON
- Docs: Mark remaining React Hook Form migration tasks as complete
- Standards: Update testing docs with Docker test script instructions

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,5 @@ nginx/frontend-build/
 terraform.tfstate*
 terraform.tfvars
 terraform/lambda_email_processor.zip
+PR-description.txt
+commit-message.txt
