--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
