--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
