Enable lint workflow on push to main and manual dispatch
Updates the frontend lint and format workflow to run on pushes to the
main branch and allows manual triggering via workflow_dispatch. This
ensures code quality checks run consistently on the primary branch and
can be executed on demand.

--- a/.github/workflows/frontend-lint-format.yml
+++ b/.github/workflows/frontend-lint-format.yml
@@ -1,6 +1,8 @@
 name: Frontend Lint & Format
 
 on:
+  push:
+    branches: [main]
   pull_request:
     paths:
       - 'frontend/src/**/*.js'
@@ -10,6 +12,7 @@ on:
       - 'frontend/package-lock.json'
       - 'frontend/tailwind.config.js'
       - '.github/workflows/frontend-lint-format.yml'
+  workflow_dispatch:
 
 # Cancel in-progress runs for the same PR/branch when a new push occurs
 concurrency:
