Update deprecated frontend dependencies
Override deprecated 'sourcemap-codec' and 'rollup-plugin-terser' with
their modern equivalents ('@jridgewell/sourcemap-codec' and
'@rollup/plugin-terser') in package.json overrides.

This resolves deprecation warnings in the frontend build pipeline and
updates package-lock.json to reflect the new dependency tree.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,6 +87,8 @@
     "postcss": "^8.4.31",
     "webpack-dev-server": "^4.15.1",
     "resolve-url-loader": "^5.0.0",
-    "eslint": "^9.33.0"
+    "eslint": "^9.33.0",
+    "sourcemap-codec": "npm:@jridgewell/sourcemap-codec@^1.5.5",
+    "rollup-plugin-terser": "npm:@rollup/plugin-terser@^0.4.4"
   }
 }
