--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
     "recharts": "^3.2.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "yet-another-react-lightbox": "^3.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
