Update nginx prod config with Vite locations
Sync production Nginx configuration with development settings to
support Vite migration.

Add location blocks for:
- /node_modules/ to allow access to dependencies
- Vite internal paths (@fs, @vite, @id, @react-refresh)

This ensures consistency between development and production environments
for Vite-based frontend assets.

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -332,7 +332,29 @@ http {
             proxy_next_upstream_timeout 3s;
         }
         
+        # Allow Vite dependencies (bypass hidden file check)
+        location ^~ /node_modules/ {
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
 
+        # Allow other Vite internal paths
+        location ~ ^/(@fs|@vite|@id|@react-refresh)/ {
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
 
         # Security: Block access to hidden files
         location ~ /\. {
