--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@ant-design/icons": "^6.1.0",
     "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.14",
+    "antd": "^6.1.3",
     "axios": "^1.3.4",
     "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
@@ -33,6 +35,7 @@
     "react-slider": "^2.0.6",
     "recharts": "^3.2.1",
     "tailwindcss": "^3.4.17",
+    "yet-another-react-lightbox": "^3.26.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
