--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
-    "@ant-design/icons": "^6.1.0",
     "@tanstack/react-table": "^8.21.3",
-    "autoprefixer": "^10.4.14",
     "antd": "^6.1.3",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
@@ -47,6 +47,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-exports": "^1.0.0-beta.5",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
