Fix frontend build dependencies and Nginx logging
- Update Vite configuration to consolidate vendor chunks and dedupe React, resolving 'useId' and circular dependency errors
- Implement lazy loading for routes in App.js to improve initial load time
- Rename 'siteKey' in turnstileConfig.js to avoid variable name collision during minification
- Move playwright to devDependencies in package.json
- Fix Nginx logging by removing 'access_log on' directive in prod.conf

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -359,15 +359,15 @@ http {
         # Security: Block access to hidden files
         location ~ /\. {
             deny all;
-            access_log off;
-            log_not_found off;
+            #access_log off;
+            #log_not_found off;
         }
 
         # Security: Block access to backup files
         location ~ ~$ {
             deny all;
-            access_log off;
-            log_not_found off;
+            #access_log off;
+            #log_not_found off;
         }
     }
 }
