--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-geolocated": "^4.3.0",
@@ -50,9 +51,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "jsdom": "^27.0.1",
     "playwright": "^1.56.1",
     "postcss": "^8.4.31",
-    "jsdom": "^27.0.1",
     "prettier": "^3.2.5",
     "puppeteer": "^24.15.0",
     "tailwindcss": "^3.4.17",
