--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-exports": "^1.0.0-beta.5",
+    "eslint-import-resolver-vite": "^2.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -58,8 +59,10 @@
     "puppeteer": "^24.15.0",
     "tailwindcss": "^3.4.17",
     "vite": "^7.3.0",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-svgr": "^4.5.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "workbox-window": "^7.4.0"
   },
   "scripts": {
     "postinstall": "npx update-browserslist-db@latest || true",
