Fix route creation 500 error, deprecations, and optimize tests
- Add missing `route_type` field to `DiveRouteBase` schema to fix 500 error
- Replace deprecated `@app.on_event("startup")` with `lifespan` handler
- Update Pydantic V2 usage: `max_items` -> `max_length`, `.dict()` -> `.model_dump()`
- Update `normalize_datetime_to_utc` signature for Pydantic V2 compatibility
- Fix `httpx` client cookies and content usage in tests
- Resolve SQLAlchemy `select` in `IN` clause and transaction warnings
- Mock external API calls in tests to reduce execution time
- Optimize database seeding in pagination tests and cache size tests
- Update pytest config to `[pytest]` and register `spatial` marker
- Suppress `passlib` internal crypt deprecation warning

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
@@ -18,4 +18,7 @@ markers =
     dive_sites: Dive sites tests
     diving_centers: Diving centers tests
     integration: Integration tests
-    spatial: Tests that require MySQL with PostGIS spatial support (skip on SQLite) 
+    spatial: Tests that require MySQL with PostGIS spatial support (skip on SQLite)
+
+filterwarnings =
+    ignore:'crypt' is deprecated:DeprecationWarning 
