Add AI-ready content generation with R2 persistence
Implement a comprehensive system to generate and serve content optimized for
LLM crawlers (llms.txt, dive-sites.md, etc.) while ensuring production
robustness and performance.

Key changes:
- Create `backend/generate_llm_content.py` to generate markdown files from
  DB data and sync with Cloudflare R2 (or local disk).
- Update `backend/startup.sh` to run content generation in the background
  on container start, preventing cold-boot delays.
- Mount `/llm_content` in FastAPI to serve generated files locally.
- Configure Nginx (`prod.conf`, `dev.conf`) to proxy `/llms.txt` and
  related files to the backend, maintaining a private R2 bucket architecture.
- Update `README.md` with recent features (PWA, Physics Engine) to populate
  the "Capabilities" section of `llms.txt`.
- Add `make generate-llm-content` for manual trigger.

--- a/.gitignore
+++ b/.gitignore
@@ -150,6 +150,9 @@ dump.rdb
 # Local development
 .local/ 
 
+# LLM Generated Content
+backend/llm_content/
+
 # Temporary import scripts (agent-created)
 backend/import_kml_dive_sites.py
 backend/update_dive_site_tags.py
