--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -45,6 +45,37 @@ http {
         listen 80;
         server_name localhost;
         
+        # LLM Content (Proxy to Backend)
+        location = /llms.txt {
+            proxy_pass http://backend/llm_content/llms.txt;
+            proxy_set_header Host $host;
+            add_header Content-Type text/plain;
+        }
+
+        location = /dive-sites.md {
+            proxy_pass http://backend/llm_content/dive-sites.md;
+            proxy_set_header Host $host;
+            add_header Content-Type text/markdown;
+        }
+
+        location = /dive-routes.md {
+            proxy_pass http://backend/llm_content/dive-routes.md;
+            proxy_set_header Host $host;
+            add_header Content-Type text/markdown;
+        }
+
+        location = /diving-centers.md {
+            proxy_pass http://backend/llm_content/diving-centers.md;
+            proxy_set_header Host $host;
+            add_header Content-Type text/markdown;
+        }
+
+        location = /dives.md {
+            proxy_pass http://backend/llm_content/dives.md;
+            proxy_set_header Host $host;
+            add_header Content-Type text/markdown;
+        }
+
         # Frontend routes
         location / {
             proxy_pass http://frontend;
