--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -101,6 +101,37 @@ http {
             add_header X-Content-Type-Options "nosniff" always;
         }
 
+        # LLM Content (Proxy to Backend)
+        location = /llms.txt {
+            proxy_pass http://backend/llm_content/llms.txt;
+            proxy_set_header Host $host;
+            add_header Content-Type text/plain;
+        }
+
+        location = /dive-sites.md {
+            proxy_pass http://backend/llm_content/dive-sites.md;
+            proxy_set_header Host $host;
+            add_header Content-Type text/markdown;
+        }
+
+        location = /dive-routes.md {
+            proxy_pass http://backend/llm_content/dive-routes.md;
+            proxy_set_header Host $host;
+            add_header Content-Type text/markdown;
+        }
+
+        location = /diving-centers.md {
+            proxy_pass http://backend/llm_content/diving-centers.md;
+            proxy_set_header Host $host;
+            add_header Content-Type text/markdown;
+        }
+
+        location = /dives.md {
+            proxy_pass http://backend/llm_content/dives.md;
+            proxy_set_header Host $host;
+            add_header Content-Type text/markdown;
+        }
+
         # SPA routing - serve index.html for all other routes
         location / {
             root /usr/share/nginx/html;
