LLM generated content updates
Download LLM generated content from R2 on backend startup
Increase cache time for LLM generated content on production

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -106,30 +106,35 @@ http {
             proxy_pass http://backend/llm_content/llms.txt;
             proxy_set_header Host $host;
             add_header Content-Type text/plain;
+            add_header Cache-Control "public, max-age=86400";
         }
 
         location = /dive-sites.md {
             proxy_pass http://backend/llm_content/dive-sites.md;
             proxy_set_header Host $host;
             add_header Content-Type text/markdown;
+            add_header Cache-Control "public, max-age=86400";
         }
 
         location = /dive-routes.md {
             proxy_pass http://backend/llm_content/dive-routes.md;
             proxy_set_header Host $host;
             add_header Content-Type text/markdown;
+            add_header Cache-Control "public, max-age=86400";
         }
 
         location = /diving-centers.md {
             proxy_pass http://backend/llm_content/diving-centers.md;
             proxy_set_header Host $host;
             add_header Content-Type text/markdown;
+            add_header Cache-Control "public, max-age=86400";
         }
 
         location = /dives.md {
             proxy_pass http://backend/llm_content/dives.md;
             proxy_set_header Host $host;
             add_header Content-Type text/markdown;
+            add_header Cache-Control "public, max-age=86400";
         }
 
         # SPA routing - serve index.html for all other routes
