--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -50,30 +50,35 @@ http {
             proxy_pass http://backend/llm_content/llms.txt;
             proxy_set_header Host $host;
             add_header Content-Type text/plain;
+            add_header Cache-Control "public, max-age=300";
         }
 
         location = /dive-sites.md {
             proxy_pass http://backend/llm_content/dive-sites.md;
             proxy_set_header Host $host;
             add_header Content-Type text/markdown;
+            add_header Cache-Control "public, max-age=300";
         }
 
         location = /dive-routes.md {
             proxy_pass http://backend/llm_content/dive-routes.md;
             proxy_set_header Host $host;
             add_header Content-Type text/markdown;
+            add_header Cache-Control "public, max-age=300";
         }
 
         location = /diving-centers.md {
             proxy_pass http://backend/llm_content/diving-centers.md;
             proxy_set_header Host $host;
             add_header Content-Type text/markdown;
+            add_header Cache-Control "public, max-age=300";
         }
 
         location = /dives.md {
             proxy_pass http://backend/llm_content/dives.md;
             proxy_set_header Host $host;
             add_header Content-Type text/markdown;
+            add_header Cache-Control "public, max-age=300";
         }
 
         # Frontend routes
