--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -109,6 +109,13 @@ http {
             add_header Cache-Control "public, max-age=86400, stale-while-revalidate=86400, stale-if-error=86400";
         }
 
+        location = /sitemap.xml {
+            proxy_pass http://backend/llm_content/sitemap.xml;
+            proxy_set_header Host $host;
+            add_header Content-Type application/xml;
+            add_header Cache-Control "public, max-age=86400, stale-while-revalidate=86400, stale-if-error=86400";
+        }
+
         location = /dive-sites.md {
             proxy_pass http://backend/llm_content/dive-sites.md;
             proxy_set_header Host $host;
