--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -85,10 +85,14 @@ http {
         # Header size limits for client requests
         large_client_header_buffers 8 16k;
 
+        # Disable directory listing
+        autoindex off;
+
         # Static assets (content-hashed) - serve directly from Nginx
         location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|eot)$ {
             root /usr/share/nginx/html;
             try_files $uri =404;
+            expires 1y;
             add_header Cache-Control "public, max-age=31536000, immutable";
             add_header X-Content-Type-Options "nosniff" always;
             access_log off;
