Fix backend cold start timeouts on login and register
- Increase Nginx proxy timeouts from 2s to 30s in prod.conf to allow
  sufficient time for cold-starting backend machines on Fly.io.
- Implement proactive backend readiness checks on Login and Register
  pages by pinging /health?frontend=true on component mount.
- Improve UX by disabling sign-in and registration buttons and
  providing visual feedback ("Connecting to server...") until the
  backend is reachable.
- Update frontend API service to enable automatic retries for auth
  endpoints (login, register, google-login) on retryable errors (504,
  5xx), ensuring better resilience against transient failures.
- Fix PWA configuration to exclude robots.txt, sitemap.xml, and
  Markdown files from navigation fallback, ensuring they are served
  correctly from the backend.
- Update index.html description and title for improved SEO.

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -88,6 +88,9 @@ http {
         # Disable directory listing
         autoindex off;
 
+        # HSTS (HTTP Strict Transport Security) - 1 year including subdomains and preload
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
         # Static assets (content-hashed) - serve directly from Nginx
         location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|eot)$ {
             root /usr/share/nginx/html;
@@ -155,6 +158,7 @@ http {
             add_header Cache-Control "public, max-age=60, stale-while-revalidate=300";
             
             # Security headers
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
             add_header X-Frame-Options "DENY" always;
             add_header X-Content-Type-Options "nosniff" always;
             add_header X-XSS-Protection "1; mode=block" always;
@@ -215,9 +219,9 @@ http {
             proxy_buffer_size 16k;
             proxy_buffers 16 16k;
             proxy_busy_buffers_size 32k;
-            proxy_read_timeout 2s;
-            proxy_connect_timeout 2s;
-            proxy_send_timeout 2s;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
             # Fast retry on failure for quick backend detection
             proxy_next_upstream error timeout;
             proxy_next_upstream_tries 2;
@@ -248,9 +252,9 @@ http {
             proxy_buffer_size 32k;
             proxy_buffers 32 32k;
             proxy_busy_buffers_size 64k;
-            proxy_read_timeout 2s;
-            proxy_connect_timeout 2s;
-            proxy_send_timeout 2s;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
             # Fast retry on failure for quick backend detection
             proxy_next_upstream error timeout;
             proxy_next_upstream_tries 2;
@@ -270,9 +274,9 @@ http {
             }
             proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
-            proxy_read_timeout 2s;
-            proxy_connect_timeout 2s;
-            proxy_send_timeout 2s;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
             # Fast retry on failure for quick backend detection
             proxy_next_upstream error timeout;
             proxy_next_upstream_tries 2;
@@ -291,9 +295,9 @@ http {
             }
             proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
-            proxy_read_timeout 2s;
-            proxy_connect_timeout 2s;
-            proxy_send_timeout 2s;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
             # Fast retry on failure for quick backend detection
             proxy_next_upstream error timeout;
             proxy_next_upstream_tries 2;
@@ -312,9 +316,9 @@ http {
             }
             proxy_set_header X-Forwarded-Proto $forwarded_proto;
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
-            proxy_read_timeout 2s;
-            proxy_connect_timeout 2s;
-            proxy_send_timeout 2s;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
             # Fast retry on failure for quick backend detection
             proxy_next_upstream error timeout;
             proxy_next_upstream_tries 2;
@@ -338,9 +342,9 @@ http {
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
-            proxy_read_timeout 2s;
-            proxy_connect_timeout 2s;
-            proxy_send_timeout 2s;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
             # Fast retry on failure for quick backend detection
             proxy_next_upstream error timeout;
             proxy_next_upstream_tries 2;
@@ -370,9 +374,9 @@ http {
         location /health {
             proxy_pass http://backend;
             proxy_set_header Host $host;
-            proxy_read_timeout 2s;
-            proxy_connect_timeout 2s;
-            proxy_send_timeout 2s;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
             # Fast retry on failure for quick backend detection
             proxy_next_upstream error timeout;
             proxy_next_upstream_tries 2;
