--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -116,6 +116,15 @@ http {
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
         }
+
+        # Short links
+        location /l/ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
         
         # Backend documentation
         location /docs {
