--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -11,7 +11,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for" '
                       'fly_client_ip="$http_fly_client_ip"';
-    
+
     # Enhanced logging for debugging
     log_format debug_format '$remote_addr - $remote_user [$time_local] "$request" '
                            '$status $body_bytes_sent "$http_referer" '
@@ -22,7 +22,7 @@ http {
 
     access_log  /dev/stdout main;
     error_log   /dev/stderr warn;
-    
+
     # Enhanced logging for debugging worker process issues
     error_log   /dev/stderr debug;
 
@@ -32,7 +32,7 @@ http {
     tcp_nodelay     on;
     keepalive_timeout  65;
     types_hash_max_size 2048;
-    
+
     # Header size limits - increase to handle large response headers
     client_header_buffer_size 4k;
     client_max_body_size 10m;
@@ -53,7 +53,7 @@ http {
         application/xml+rss
         application/atom+xml
         image/svg+xml;
-    
+
     # Enable serving precompressed files
     gzip_static on;
 
@@ -66,7 +66,7 @@ http {
         server divemap-frontend.flycast:80;
         keepalive 32;
     }
-    
+
     upstream backend {
         server divemap-backend.flycast:80 max_fails=1 fail_timeout=3s;
         keepalive 32;
@@ -81,7 +81,7 @@ http {
         real_ip_header Fly-Client-IP;
         real_ip_recursive on;
         set_real_ip_from 0.0.0.0/0;
-        
+
         # Header size limits for client requests
         large_client_header_buffers 8 16k;
 
@@ -156,7 +156,7 @@ http {
             root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
             add_header Cache-Control "public, max-age=60, stale-while-revalidate=300";
-            
+
             # Security headers
             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
             add_header X-Frame-Options "DENY" always;
@@ -173,7 +173,7 @@ http {
         location ~ ^/api/v1/(newsletters/parse-text|dives/import/) {
             # Rate limiting for API endpoints
             limit_req zone=api burst=20 nodelay;
-            
+
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -187,7 +187,7 @@ http {
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
-            
+
             # Extended timeout for long-running operations
             proxy_buffering on;
             proxy_buffer_size 32k;
@@ -200,39 +200,35 @@ http {
 
         # Backend API routes with rate limiting
         location /api/ {
-            # Rate limiting for API endpoints
-            limit_req zone=api burst=20 nodelay;
-            
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            # Cloudflare always uses HTTPS, so set X-Forwarded-Proto to https
-            # This ensures FastAPI generates correct HTTPS URLs for redirects
-            proxy_set_header X-Forwarded-Proto https;
-            proxy_set_header Fly-Client-IP $http_fly_client_ip;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-            
+            proxy_set_header X-Forwarded-Proto $scheme;
+
             # Backend specific settings - increased buffer sizes for large headers
             proxy_buffering on;
             proxy_buffer_size 16k;
             proxy_buffers 16 16k;
             proxy_busy_buffers_size 32k;
-            proxy_read_timeout 30s;
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            # Fast retry on failure for quick backend detection
-            proxy_next_upstream error timeout;
-            proxy_next_upstream_tries 2;
-            proxy_next_upstream_timeout 3s;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
         }
-        
+
+        # Short links
+        location /l/ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Special handling for dive-sites endpoint that can have large headers
         location ~ ^/api/v1/dive-sites/ {
             # Rate limiting for API endpoints
             limit_req zone=api burst=20 nodelay;
-            
+
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -246,7 +242,7 @@ http {
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
-            
+
             # Optimized buffer settings for dive-sites endpoint
             proxy_buffering on;
             proxy_buffer_size 32k;
@@ -282,7 +278,7 @@ http {
             proxy_next_upstream_tries 2;
             proxy_next_upstream_timeout 3s;
         }
-        
+
         location /redoc {
             proxy_pass http://backend;
             proxy_set_header Host $host;
@@ -303,7 +299,7 @@ http {
             proxy_next_upstream_tries 2;
             proxy_next_upstream_timeout 3s;
         }
-        
+
         location /openapi.json {
             proxy_pass http://backend;
             proxy_set_header Host $host;
@@ -328,7 +324,7 @@ http {
         # Login endpoint with stricter rate limiting
         location /api/v1/auth/login {
             limit_req zone=login burst=5 nodelay;
-            
+
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -360,7 +356,7 @@ http {
             add_header X-Nginx-Status "healthy" always;
             add_header X-Worker-PID $pid always;
         }
-        
+
         # Nginx status endpoint for debugging
         location /nginx-status {
             access_log /dev/stdout debug_format;
@@ -382,7 +378,7 @@ http {
             proxy_next_upstream_tries 2;
             proxy_next_upstream_timeout 3s;
         }
-        
+
         # Allow Vite dependencies (bypass hidden file check)
         location ^~ /node_modules/ {
             proxy_pass http://frontend;
