--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@radix-ui/react-select": "^2.2.6",
     "@tanstack/react-table": "^8.21.3",
     "antd": "^6.1.3",
+    "antd-mobile": "^5.42.3",
+    "antd-mobile-icons": "^0.3.0",
     "axios": "^1.3.4",
     "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
